minor bug fix again. Space between Link elements is reduced so that Tournament link is visible.

--- a/src/Components/Navbar/components/HamburgerMenu.module.css
+++ b/src/Components/Navbar/components/HamburgerMenu.module.css
@@ -86,6 +86,7 @@
 
 .link {
   text-decoration: none;
+  margin-top: -100px;
 }
 
 .font {
